[CHORE] refactor code, list errors and optimize db threads
